#Update my LoginPage AB#6

--- a/Group5F25.APP/Group5F25.APP/Pages/LoginPage.xaml
+++ b/Group5F25.APP/Group5F25.APP/Pages/LoginPage.xaml
@@ -11,7 +11,7 @@
         <VerticalStackLayout Grid.Row="1" Spacing="14" VerticalOptions="Center">
 
             <Label 
-                Text="Driver Analytics" 
+                Text="Driver Analytics APP" 
                 FontSize="24" 
                 HorizontalOptions="Center" />
 
