--- a/Group5F25.APP/Group5F25.APP/AppShell.xaml
+++ b/Group5F25.APP/Group5F25.APP/AppShell.xaml
@@ -2,8 +2,5 @@
 <Shell
     x:Class="Group5F25.APP.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:pages="clr-namespace:Group5F25.APP.Pages">
-    <ShellContent Route="login" Title="Login" ContentTemplate="{DataTemplate pages:LoginPage}" />
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 </Shell>
-    
