--- a/Group5F25.APP/Group5F25.APP/Pages/LoginPage.xaml
+++ b/Group5F25.APP/Group5F25.APP/Pages/LoginPage.xaml
@@ -34,6 +34,11 @@
             <Button 
                 Text="{Binding LoginButtonText}" 
                 Command="{Binding LoginCommand}" />
+            <Button 
+                Text="Create Account"
+                Clicked="OnRegisterClicked" />
+
+
         </VerticalStackLayout>
     </Grid>
 </ContentPage>
