--- a/Group5F25.APP/Group5F25.APP/Resources/Styles/Colors.xaml
+++ b/Group5F25.APP/Group5F25.APP/Resources/Styles/Colors.xaml
@@ -36,6 +36,9 @@
     <Color x:Key="Gray900">#212121</Color>
     <Color x:Key="Gray950">#141414</Color>
 
+    <Color x:Key="GreenAccent">#28a745</Color>
+    <Color x:Key="Error">#dc3545</Color> 
+    
     <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
     <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
     <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}"/>
